--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <wrapper class="box">
+      <div class="container">
+        <div class="box__title">
+          <h1>TicTakToe</h1>
+        </div>
+
+        <div class="box__form">
+          <div class="box__cube" id="box__cube">
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+            <div class="box__cube-square"></div>
+          </div>
+        </div>
+
+        <div class="box__text" id="box__text">
+          <div class="box__player" id="box__player">
+            <div class="box__player-winner" id="box__player-winner">Winner</div>
+            <div class="box__player-x-o" id="box__player-x-o">x</div>
+            <div class="box__player-newgame" id="box__player-newgame">
+              Start new game
+            </div>
+          </div>
+        </div>
+      </div>
+    </wrapper>
+
     <script src="./main.js"></script>
   </body>
 </html>
